# Detours

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build_cmake.cmd
.github/workflows/: build-release.yml  main.yml
cmake/: DetoursConfig.cmake.in
src/: Makefile  creatwth.cpp  detours.cpp  detours.h  disasm.cpp  image.cpp  modules.cpp
vc/: Detours.sln  Detours.vcxproj  Detours.vcxproj.filters
